# desafio-tecnico-consultor-agents-ia

./: .dockerignore  .gitignore  Dockerfile  README.md  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.specs/features/banco-agil-agents/: spec.md  test-matrix.md
banco_agil/: config.py
banco_agil/agents/: common.py  credit.py  credit_interview.py  exchange.py  triage.py
banco_agil/core/: graph.py  guardrails.py  orchestrator.py  prompts.py  tools_bridge.py
banco_agil/core/agent/: base.py
banco_agil/core/llm/: base.py  (+2 more)
banco_agil/data/: clientes.csv  score_limite.csv  solicitacoes_aumento_limite.csv
banco_agil/models/: cliente.py  solicitacao.py
banco_agil/services/: auth.py  credit.py  score.py
banco_agil/tools/: csv_ops.py  exchange_api.py
banco_agil/ui/: app.py
docs/: desafio-tecnico.md  langsmith.md
evals/: langsmith_integration.py  report.py  run.py
evals/datasets/: e2e_cases.jsonl  guardrail_cases.jsonl  loader.py  routing_cases.jsonl  tool_calling_cases.jsonl
evals/metrics/: accuracy.py
evals/runners/: single_turn.py
public/: theme.css
scripts/: seed_data.py
tests/: test_seed.py
tests/agents/: test_credit.py  test_credit_interview.py  test_exchange.py  test_triage.py
tests/core/: test_agent_base.py  test_gemini_provider.py  test_graph.py  test_guardrails.py  test_llm_provider.py  test_orchestrator.py
tests/evals/: test_eval_infra.py
tests/models/: test_cliente.py  test_solicitacao.py
tests/services/: test_auth.py  test_credit.py  test_score.py
tests/tools/: test_csv_ops.py  test_exchange_api.py
